Adicionando a service e model no blog do terror

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+
+    //ativando campos da model
+    "strictPropertyInitialization": false,
+    //fim ativação
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
